applications/traefik/dashboard/03-ingress-route-traefik.yaml
# Reference URL: https://github.com/techno-tim/launchpad/blob/master/kubernetes/traefik-cert-manager/traefik/dashboard/secret-dashboard.yaml
# Ingress Route declaration to access Traefik Dashboard
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`traefik.pradax.tk`)"
      middlewares:
        - name: authentik
        #- name: traefik-dashboard-basicauth
          namespace: traefik
      priority: 10
      services:
        - kind: TraefikService
          name: api@internal
          #port: 443
    # - kind: Rule
    #   match: "Host(`traefik.pradax.tk`) && PathPrefix(`/outpost.goauthentik.io/`)"
    #   priority: 15
    #   services:
    #       - kind: Service
    #         # Or, to use an external Outpost, create an ExternalName service and reference that here.
    #         # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
    #         name: ak-outpost-pradax-outpost
    #         port: 9000
  tls:
    store:
      name: default
    #certResolver: default
    #secretName: local-example-com-staging-tls
